Add records page - table view

--- a/views/data.tt
+++ b/views/data.tt
@@ -1,357 +1,15 @@
-[% INCLUDE layouts/page_header_records.tt; %]
+[%
+  INCLUDE layouts/page_header_records.tt;
 
-
-
-
-
-
-
-
-
-
-
-
-[% IF search %]
-    <div class="row search-results">
-        <h1>
-            Search results <small class="search_term">for term "[% search | html_entity %]"
-                [% UNLESS search_limit_reached %]([% count %] results)[% END %]
-            </small>
-	    <form id="clear_search" action="/[% layout.identifier %]/data" method="post">
-                <input type="hidden" name="csrf_token" value="[% csrf_token %]">
-		<button type="submit" name="clear_search" value="clear_search" class="btn btn-default">
-		Clear <span class="visually-hidden">search results</span>
-		</button>
-	    </form>
-	</h1>
-    </div>
-[% ELSIF v %]
-    <h1 >[% v.name | html_entity %]</h1>
-[% ELSE %]
-    <h1>All data</h1>
-[% END %]
-[% IF search_limit_reached %]
-    <h3>Only showing first [% search_limit_reached %] results</h3>
-[% END %]
-
-    <div class="row">
-        <div class="col-md-9">
-            <div class="btn-toolbar" role="toolbar">
-
-                [% PROCESS viewtype_buttons %]
-
-                <div class="btn-group">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_view">
-                            Current view: [% IF v %][% v.name | html %][% ELSE %]All data[% END %] <span class="caret"></span>
-                    </button>
-                    <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu">
-			[% IF layout.user_can("view_create") %]
-			    <li class="[% IF page=="view/0" %]active [% END %]view-add"><a href="[% url.page %]/[% layout.identifier %]/view/0">Add a view</a></li>
-			[% END %]
-
-			[% IF v %]
-                            [% IF layout.user_can("view_create") %]
-				[% IF v.writable %]
-				    <li class="[% IF page=="view" %]active [% END %]view-edit"><a href="[% url.page %]/[% layout.identifier %]/view/[% v.id %]">
-                                        Edit current view</a></li>
-				[% END %]
-				<li [% IF page=="view/clone" %]class="active"[% END %]><a href="[% url.page %]/[% layout.identifier %]/view/0?clone=[% v.id %]">Clone current view</a></li>
-			    [% END %]
-                            <li role="presentation"><a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_alert">Alert me...</a></li>
-			[% END %]
-
-                        [% IF layout.user_can("layout") %]
-                            <li role="presentation">
-                                <a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_views_other_user">
-                                    Manage views of another user...
-                                </a>
-                            </li>
-                        [% END %]
-                        <li role="presentation">
-                            <a href="" role="menuitem" tabindex="-1" data-toggle="modal" data-target="#modal_rewind">
-                                Historic view...
-                            </a>
-                        </li>
-
-                        [% BLOCK print_view %]
-                            <li role="presentation"
-                                    [% IF ve.id == v.id %]class="active"[% END %]
-                                >
-                                <a role="menuitem" tabindex="-1" href="/[% layout.identifier %]/data?view=[% ve.id %]">[% ve.name | html_entity %]
-                                    [% veid = ve.id %]
-                                    [% IF alerts.$veid %]<img src="/images/bell.png">[% END %]
-                                </a>
-                            </li>
-                        [% END %]
-                        [% IF user_views.personal.size %]
-                            <li role="presentation" class="divider"></li>
-                            <li role="presentation" class="dropdown-header">
-                                [% IF views_other_user %]Views of [% views_other_user.value | html %][% ELSE %]Personal views[% END %]
-                            </li>
-                            [% FOREACH ve IN user_views.personal %]
-                                [% PROCESS print_view %]
-                            [% END %]
-                        [% END %]
-                        [% IF user_views.admin.size %]
-                            <li role="presentation" class="divider"></li>
-                            <li role="presentation" class="dropdown-header">Administration views</li>
-                            [% FOREACH ve IN user_views.admin %]
-                                [% PROCESS print_view %]
-                            [% END %]
-                        [% END %]
-                        [% IF user_views.shared.size %]
-                            <li role="presentation" class="divider"></li>
-                            <li role="presentation" class="dropdown-header">Shared views</li>
-                            [% FOREACH ve IN user_views.shared %]
-                                [% PROCESS print_view %]
-                            [% END %]
-                        [% END %]
-                    </ul>
-                </div>
-
-		[% IF views_limit_extra.size %]
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_view">
-                            [% current_view_limit_extra.name | html %] <span class="caret"></span>
-                        </button>
-                        <ul id="menu_view" class="dropdown-menu scrollable-menu" role="menu">
-                            [% FOR view_limit IN views_limit_extra %]
-                                <li role="presentation">
-                                    <a role="menuitem" tabindex="-1" href="/[% layout.identifier %]/data?extra=[% view_limit.id %]">
-                                        [% view_limit.name | html %]
-                                    </a>
-                                </li>
-                            [% END %]
-                        </ul>
-                    </div>
-                [% END %]
-
-                [% IF layout.user_can("bulk_update") OR layout.user_can("delete") OR layout.user_can("download") OR layout.user_can("bulk_delete") %]
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_action">
-                                Action <span class="caret"></span>
-                        </button>
-                        <ul id="menu_action" class="dropdown-menu" role="menu">
-                            [% IF search %]
-                                [% sel_type = "records in this search" %]
-                            [% ELSIF viewtype == "timeline" %]
-                                [% sel_type = "selected records" %]
-                            [% ELSE %]
-                                [% sel_type = "records in this view" %]
-                            [% END %]
-                            [% IF layout.user_can("delete") AND layout.user_can("bulk_delete") %]
-                                <li role="presentation"><a role="menuitem" id="delete_href" class="bulk_href" tabindex="-1" data-toggle="modal" data-target="#modal_delete" style="cursor: pointer">Delete all [% sel_type %]...</a>
-                            [% END %]
-                            [% IF layout.user_can("bulk_update") %]
-                                <li role="presentation"><a role="menuitem" id="update_href" class="bulk_href" tabindex="-1" href="/[% layout.identifier %]/bulk/update/">Update all [% sel_type %]...</a></li>
-                                <li role="presentation"><a role="menuitem" id="clone_href" class="bulk_href" tabindex="-1" href="/[% layout.identifier %]/bulk/clone/">Clone all [% sel_type %]...</a></li>
-                            [% END %]
-                            [% IF viewtype == "table" AND records.size AND layout.user_can("download") %]
-                                <li role="presentation"><a role="menuitem" tabindex="-1"
-                                        href="/[% layout.identifier %]/data?download[% IF filter_url %]&[% filter_url %][% END %]">Download records</a></li>
-                            [% END %]
-                            [% INCLUDE 'extension/data_action_menu_extra.tt' %]
-                        </ul>
-                    </div>
-                [% END %]
-
-                [% IF viewtype == "timeline" %]
-                    <div class="btn-group">
-                        <a class="btn btn-default" data-toggle="modal" data-target="#modal_timeline" role="button">Timeline options...</a>
-                    </div>
-                    [% UNLESS layout.no_download_pdf %]
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false" aria-controls="menu_action">
-                                    Download <span class="caret"></span>
-                            </button>
-                            <ul id="menu_action" class="dropdown-menu" role="menu">
-                                <li role="presentation">
-                                    <a role="menuitem" href="/[% layout.identifier %]/data?png=1">Download as PNG image</a>
-                                    <a role="menuitem" href="" data-toggle="modal" data-target="#modal_pdf">Download as PDF document...</a>
-                                </li>
-                            </ul>
-                        </div>
-                    [% END %]
-                [% ELSIF viewtype == "globe" %]
-                    <div class="btn-group">
-                        <a class="btn btn-default" data-toggle="modal" data-target="#modal_globe" role="button">Globe options...</a>
-                    </div>
-                [% ELSIF viewtype == "graph" %]
-                    <div class="btn-group">
-                        <a href="[% url.page %]/[% layout.identifier %]/graphs/" class="btn btn-default" role="button">Select graphs...</a>
-                    </div>
-                [% END %]
-            </div>
-        </div>
-
-        [% IF viewtype == "table" %]
-            <div class="col-md-3 table-rows-pagination">
-               <form method="get" class="form-inline">
-                   <input type="hidden" name="csrf_token" value="[% csrf_token %]">
-                    <div class="form-group">
-                        <label for="rows_per_page" class="control-label">Rows per page</label>
-                        <select id="rows_per_page" class="form-control" name="rows" role="listbox">
-                            <option value="10" [% IF subset.rows == 10 %]selected[% END %]>10</option>
-                            <option value="25" [% IF subset.rows == 25 %]selected[% END %]>25</option>
-                            <option value="50" [% IF subset.rows == 50 %]selected[% END %]>50</option>
-                            <option value="100" [% IF subset.rows == 100 %]selected[% END %]>100</option>
-                            <option value="200" [% IF subset.rows == 200 %]selected[% END %]>200</option>
-                        </select>
-                    </div>
-                </form>
-            [% IF subset.pages > 1 %]
-                <div class="table-pagination">
-                [% IF subset.page != 1 %]
-                    <a class="btn btn-default" href="?page=[% subset.page - 1 %]">
-                        <span class="visually-hidden">Previous page</span>&laquo;</a>
-                [% END %]
-                [% IF subset.page != subset.pages %]
-                    <a class="btn btn-default" href="?page=[% subset.page + 1 %]">
-                        <span class="visually-hidden">Next page</span>&raquo;</a>
-                [% END %]
-                </div>
-            [% END %]
-            </div>
-        [% END %]
-    </div>
-
-[% INCLUDE 'extension/data_footer.tt' %]
-
-[% IF viewtype == "graph" %]
-    [% INCLUDE 'data_graph.tt' %]
-[% ELSIF viewtype == "calendar" %]
-    [% INCLUDE 'data_calendar.tt' %]
-[% ELSIF viewtype == "timeline" %]
-    [% INCLUDE 'data_timeline.tt' %]
-[% ELSIF viewtype == "globe" %]
-    [% INCLUDE 'data_globe.tt' %]
-[% ELSE %]
-    [% INCLUDE 'data_table.tt' %]
-[% END %]
-
-[% IF v %]
-    [% WRAPPER modal_dialog.tt
-        modal_id="modal_alert" modal_action_text=!v.is_group && "Create alert" modal_heading="Configure alert for " _  v.name
-        modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post"
-    %]
-        [% IF v.is_group %]
-            <div class="alert alert-danger">
-                It is not possible to configure alerts on views containing groups. Please use a view without a group.
-            </div>
-        [% ELSE %]
-            <input type="hidden" value="[% v.id %]" name="view_id">
-            <div class="form-group">
-                <label for="frequency">Alert me:</label>
-                <select class="form-control" id="frequency" name="frequency">
-                    <option value="" [% IF NOT v.alert %]selected[% END %]>Never</option>
-                    <option value="0" [% IF v.alert.frequency == 0 %]selected[% END %]>Instantly</option>
-                    <option value="24" [% IF v.alert.frequency == 24 %]selected[% END %]>Every 24 hours</option>
-                </select>
-            </div>
-        [% END %]
-    [% END %]
-[% END %]
-
-[% IF layout.user_can("layout") %]
-    [% IF views_other_user %][% modal_extra_action = "views_other_user_clear" %][% END %]
-    [% WRAPPER modal_dialog.tt
-        modal_id="modal_views_other_user" modal_action_text="Submit" modal_heading="Manage views of other user"
-        modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post" modal_extra_action = modal_extra_action
-        modal_extra_action_text = "Reset to my views"
-    %]
-        <div class="form-group">
-            <label for="views_other_user_id">Select user:</label>
-                <input type="hidden" name="views_other_user_id" id="views_other_user_id" value="[% views_other_user.id %]">
-                <input type="text" class="form-control" id="views_other_user_typeahead" autocomplete="off"
-                    name="views_other_user_typeahead" value="[% views_other_user.value | html %]" placeholder="Start typing...">
-        </div>
-    [% END %]
-[% END %]
-
-[% IF session.rewind %]
-    [% reset_button = "modal_rewind_reset" %]
-    [% submit_button = "Update" %]
-[% ELSE %]
-    [% reset_button = "" %]
-    [% submit_button = "Submit" %]
-[% END %]
-[% WRAPPER modal_dialog.tt
-    modal_id="modal_rewind" modal_action_text = submit_button modal_heading="View data as it was at a previous time"
-    modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post" modal_extra_action = reset_button
-    modal_extra_action_text = "Reset to normal"
+  IF viewtype == "graph";
+    INCLUDE 'data_graph.tt';
+  ELSIF viewtype == "calendar";
+      INCLUDE 'data_calendar.tt';
+  ELSIF viewtype == "timeline";
+      INCLUDE 'data_timeline.tt';
+  ELSIF viewtype == "globe";
+      INCLUDE 'data_globe.tt';
+  ELSE;
+      INCLUDE 'data_table.tt';
+  END;
 %]
-    <div class="form-group">
-        <label for="rewind_date">Date ([% config.dateformat %]):</label>
-        <input id="rewind_date" class="form-control datepicker" type="text" value="[% session.rewind.format_cldr(config.dateformat) %]" name="rewind_date">
-    </div>
-    <div class="form-group">
-        <label for="rewind_time">Time (HH:MM:SS):</label>
-        <input id="rewind_time" class="form-control" type="text" value="[% session.rewind.hms %]" name="rewind_time" placeholder="23:59:59">
-    </div>
-[% END %]
-
-[% WRAPPER modal_dialog.tt
-    modal_id="modal_delete" modal_action_text="Delete" modal_heading="Delete records"
-    modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post"
-%]
-    <h2 class="alert alert-danger" role="alert">Are you sure you want to delete records?</h2>
-    <div id="delete_ids"></div>
-    <p>Are you sure you want to delete all the records that are in the current view?</p>
-    <p class="text-danger"><strong>Warning: this will delete <span id="count_delete">[% count %]</span> records.</strong></p>
-[% END %]
-
-[% IF viewtype == "timeline" %]
-    [% WRAPPER modal_dialog.tt
-        modal_id="modal_timeline" modal_action_text="Update options" modal_heading="Timeline view options"
-        modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post"
-    %]
-        [% PROCESS snippets/timeline_options.tt %]
-    [% END %]
-[% END %]
-
-[% BLOCK viewtype_buttons %]
-    <div class="btn-group" role="group">
-        <a href="?viewtype=table" class="btn btn-default">
-            <span aria-hidden="true" class="fa fa-list fa-lg use-icon-font"></span>
-            <img src="/images/icon-data-list.png" class="use-icon-png" style="display:none" alt="">
-            <span class="visually-hidden">View as table</span>
-        </a>
-
-        <a href="?viewtype=graph" class="btn btn-default">
-            <span aria-hidden="true" class="fa fa-area-chart fa-lg use-icon-font"></span>
-            <img src="/images/icon-data-chart.png" class="use-icon-png" style="display:none" alt="">
-            <span class="visually-hidden">View as graph</span>
-        </a>
-
-        <a href="?viewtype=timeline" class="btn btn-default">
-            <span aria-hidden="true" class="fa fa-tasks fa-lg use-icon-font"></span>
-            <img src="/images/icon-data-tasks.png" class="use-icon-png" style="display:none" alt="">
-            <span class="visually-hidden">View on timeline</span>
-        </a>
-
-        <a href="?viewtype=calendar" class="btn btn-default">
-            <span aria-hidden="true" class="fa fa-calendar fa-lg use-icon-font"></span>
-            <img src="/images/icon-data-calendar.png" class="use-icon-png" style="display:none" alt="">
-            <span class="visually-hidden">View on calendar</span>
-        </a>
-
-	[% IF layout.has_globe %]
-	    <a href="?viewtype=globe" class="btn btn-default">
-		<i aria-hidden="true" class="fa fa-globe fa-lg use-icon-font"></i>
-		<img src="/images/icon-data-globe.png" class="use-icon-png" style="display:none" alt="">
-		<span class="visually-hidden">View on globe</span>
-	    </a>
-	[% END %]
-    </div>
-[% END %]
-
-[% IF viewtype == "globe" %]
-    [% WRAPPER modal_dialog.tt
-        modal_id="modal_globe" modal_action_text="Update options" modal_heading="Globe view options"
-        modal_with_cancel_button = 1 modal_with_form = 1 modal_form_method = "post"
-    %]
-        [% PROCESS snippets/globe_options.tt %]
-    [% END %]
-[% END %]
-
-[% PROCESS snippets/record_readmore.tt %]
