--- a/views/data_graph.tt
+++ b/views/data_graph.tt
@@ -1,30 +1,60 @@
-[% IF page_as_mech %]
-    <div id="chartdiv[% graph_id %]" data-page-as-mech="false" style="height:400px;width:600px; "></div>
-[% ELSE %]
-    [% count = 0 %]
-    [% FOREACH graph IN graphs %]
-        [% NEXT UNLESS graph.selected %]
-        <div>
-            <h3>[% graph.title | html_entity %]</h3>
-            [% IF graph.description %]<p>[% graph.description | html_entity %]</p>[% END %]
-            <div
-                id="chartdiv[% graph.id %]"
-                style="height:400px;width:600px;"
-                data-graph-type="[% graph.type %]"
-                data-x-axis-name="[% graph.x_axis_name | replace('"', '\\\"') %]"
-                data-y-axis-label="[% graph.y_axis_label | replace('"', '\\\"') %]"
-                data-stackseries="[% graph.stackseries %]"
-                data-showlegend="[% IF graph.showlegend %]true[% ELSE %]false[% END %]"
-                data-graph-id="[% graph.id %]"
-                data-layout-id="[% layout.identifier %]"
-                ></div>
-            <p><a href="?png=[% graph.id %]">PNG</a> | <a href="?csv=[% graph.id %]">CSV</a></p>
+<div class="content-block__main">
+  <div class="content-block__main-content">
+  [%
+    hasGraphs = 0;
+    FOREACH graph IN graphs;
+      NEXT UNLESS graph.selected;
+      hasGraphs = 1;
+  %]
+    <div class="graph">
+      <div class="row">
+        <div class="col">
+          <h2>[% graph.title | html_entity %]</h2>
+          [% IF graph.description %]<p>[% graph.description | html_entity %]</p>[% END %]
         </div>
-        [% count = count + 1 %]
-    [% END %]
-
-    [% UNLESS count %]
-    <p>No graphs are selected for display. Please use the
-    <a href="[% url.page %]/[% layout.identifier %]/graphs/">Select graphs</a> button above to add graphs for display.</p>
-    [% END %]
-[% END %]
+        <div class="col d-flex justify-content-end mb-2">
+          <div class="dropdown ">
+            <button class="dropdown-toggle dropdown__toggle" type="button" id="download" data-toggle="dropdown" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="download">
+              <span>Download</span>
+            </button>
+            <div class="dropdown-menu dropdown__menu ">
+              <div class="dropdown__group">
+                <ul class="dropdown__list" role="listbox" aria-labelledby="dropdown">
+                  <li class="dropdown__item" role="option" >
+                    <a class='link link--plain' href='?png=[% graph.id %]'>PNG</a>
+                  </li>
+                  <li class="dropdown__item" role="option" >
+                    <a class='link link--plain' href='?csv=[% graph.id %]'>CSV</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      <div class="row">
+        <div class="col">
+          <div
+            class="graph__container"
+            id="chartdiv[% graph.id %]"
+            data-graph-type="[% graph.type %]"
+            data-x-axis-name="[% graph.x_axis_name | replace('"', '\\\"') %]"
+            data-y-axis-label="[% graph.y_axis_label | replace('"', '\\\"') %]"
+            data-stackseries="[% graph.stackseries %]"
+            data-showlegend="[% IF graph.showlegend %]true[% ELSE %]false[% END %]"
+            data-graph-id="[% graph.id %]"
+            data-layout-id="[% layout.identifier %]"
+          ></div>
+        </div>
+      </div>
+    </div>
+  [%
+    END;
+    UNLESS hasGraphs;
+  %]
+  <p>No graphs are selected for display. Please use the
+  <a href="[% url.page %]/[% layout.identifier %]/graphs/">Select graphs</a> button above to add graphs for display.</p>
+  [% END %]
+  </div>
+</div>
