--- a/views/layouts/page_header_records.tt
+++ b/views/layouts/page_header_records.tt
@@ -37,8 +37,14 @@
   </div>
   
   <div class="content-block__aside col-xl-9">
+  [% IF viewtype == "graph" %]
+    <a href="[% url.page %]/[% layout.identifier %]/graph/0" class="btn btn-add">
+      Add a graph
+    </a>
+  [% ELSIF viewtype == "table" %]
     <a href="[% url.page %]/[% layout.identifier %]/record/" class="btn btn-add">
       Add a record
     </a>
+  [% END %]
   </div>
 </div>
