--- a/views/snippets/data_timeline_inner.tt
+++ b/views/snippets/data_timeline_inner.tt
@@ -1,9 +1,20 @@
-<div class="wrapper">
-    <div id="loading-div" class="centered-overlay">
-         <div class="loader"></div>
-    </div>
-    <div class="visualization" data-records="[% records %]" data-groups="[% groups %]" data-rewind="[% session.rewind %]"
-        data-width="[% tl_options.canvas_width %]" data-height="[% tl_options.canvas_height %]" data-min="[% timeline.min %]"
-        data-max="[% timeline.max %]" style="width:100%" data-dashboard="[% dashboard %]" data-view="[% view_id %]">
-    </div>
+<div class="timeline__container">
+  <div class="timeline__overlay">
+    <div class="timeline__loader"></div>
+  </div>
+  
+  <div
+    class="timeline__visualization"
+    data-records="[% records %]"
+    data-groups="[% groups %]"
+    data-rewind="[% session.rewind %]"
+    data-width="[% tl_options.canvas_width %]"
+    data-height="[% tl_options.canvas_height %]"
+    data-min="[% timeline.min %]"
+    data-max="[% timeline.max %]"
+    data-dashboard="[% dashboard %]"
+    data-view="[% view_id %]"
+    style="width:100%"
+  >
+  </div>
 </div>
