Add graph overview page

--- a/views/graphs.tt
+++ b/views/graphs.tt
@@ -1,57 +1,129 @@
-<h2>Graphs</h2>
-<p>
-    <a href="/[% layout.identifier %]/graph/0" class="btn btn-default" role="button">Create new graph</a>
-</p>
-<div class="row">
-    <div class="col-md-12">
-        [% IF graphs.size %]
-            <p>Use this page to configure what graphs are displayed on your home page. New
-            graphs can only be added by an administrator.</p>
-            <table class="table table-striped dtable" data-page-length="30">
-                <thead>
-                    <tr>
-                        <th>Selected</th>
-                        <th>Edit</th>
-                        <th>Title</th>
-                        <th>Type</th>
-                        <th>X-axis</th>
-                        <th>Y-axis</th>
-                        <th>Group by</th>
-                    </tr>
-                </thead>
-                </body>
-                    [% FOREACH graph IN graphs %]
-                        <tr>
-                            <td>
-                                <input type="checkbox" name="graphs" value="[% graph.id %]"[% IF graph.selected %]checked[% END %]>
-                            </td>
-                            <td>
-                                [% IF graph.writable %]
-                                    <a href="/[% layout.identifier %]/graph/[% graph.id %]">Edit</a></td>
-                                [% ELSE %]
-                                    Read-only
-                                [% END %]
-                            <td>[% graph.title | html %]
-                            <td>[% graph.type.ucfirst %]</td>
-                            <td>[% layout.column(graph.x_axis).name | html %]</td>
-                            <td>[% layout.column(graph.y_axis).name | html %]</td>
-                            <td>[% layout.column(graph.group_by).name | html %]</td>
-                        </tr>
-                    [% END %]
-            </table>
-            <div style="height:55px;"></div>
-            <form role="form" method="post">
-                <input type="hidden" name="csrf_token" value="[% csrf_token %]">
-                <nav class="navbar navbar-default navbar-fixed-bottom" style="min-height:55px">
-                    <div class="container">
-                        <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
-                    </div>
-                </nav>
-            </form>
-        [% ELSE %]
-            <p>
-                No graphs have been created. Please use the &quot;Create new graph&quot; button above to add one.
-            </p>
-        [% END %]
+<div class="content-block ">
+  <div class="content-block__head row">
+    <div class="content-block__info col-lg-6">
+      <h2 class="content-block__title">
+        Manage graphs
+      </h2>
+      
+      <div class="content-block__intro">
+        Use this page to configure what graphs are displayed on your home page. New graphs can only be added by an administrator.
+      </div>
     </div>
+    
+    <div class="content-block__aside col-lg-6">
+      <a href="[% url.page %]/[% layout.identifier %]/graph/0" class="btn btn-add">
+        <span class="btn__title">Add a graph</span>
+      </a>
+    </div>
+  </div>
+  
+  <div class="content-block__main">
+    <div class="content-block__main-content">
+      <form method="post" class="">
+        [%
+          INCLUDE fields/hidden.tt name="csrf_token" value=csrf_token;
+        
+          # prepare table config
+          table_class        = 'table-striped table-selectable';
+          table_dom          = '<\"row row--header\"<\"col\"f><\"col-lg-auto dataTables_length_wrapper\"l>><\"row row--main\"<\"col-sm-12\"tr>><\"row row--footer\"<\"col-sm-12 col-lg-6\"p><\"col-sm-12 col-lg-6 dataTables_info_wrapper\"i>>';
+          # todo: change to endpoint URL
+          table_order        = '[0,"asc"]';
+          table_language     = '{"emptyTable": "No graphs have been created. Please use the &quot;Add a graph&quot; button above to add one.","lengthMenu":"Rows per page _MENU_","paginate":{"next":"Next page","previous":"Previous page"},"search":"","searchPlaceholder":"Search in this table"}';
+          table_page_length  = 50;
+          table_length_menu  = 'basic';
+          table_unresponsive = 0;
+          rows               = [];
+          table_columns      = [{
+            name      = "Select",
+            orderable = 0,
+            data      = "check",
+            class     = "check",
+            width     = "10%"
+          }, {
+            name      = "Title",
+            orderable = 1
+          }, {
+            name      = "Type",
+            orderable = 1
+          }, {
+            name      = "X-axis",
+            orderable = 1
+          }, {
+            name      = "Y-axis",
+            orderable = 1
+          }, {
+            name      = "Group by",
+            orderable = 1
+          }];
+        
+          FOREACH graph IN graphs;
+            rows.push({
+              link_placeholders = {
+                graph_id = graph.id
+                table_short_name = layout_obj.identifier
+              }
+              fields = [{
+                type        = "text"
+                label       = ""
+                sub_field   = "fields/sub/checkbox.tt"
+                sub_params  = {
+                  id => "dt_checkbox_" _ graph.id
+                  name => "graphs"
+                  label => graph.id
+                  checked => graph.selected ? 1 : 0
+                  filter => "html"
+                  is_required => 0
+                  autofocus => 0
+                  input_class => "checkbox--hide-label"
+                  label_in_span => 1
+                  value => 1
+                }
+              }, {
+                type  = graph.writable ? "link" : "text"
+                label = graph.title
+                link  = url.page _ "/{table_short_name}/graph/{graph_id}"
+                filter = "html"
+              },{
+                type  = graph.writable ? "link" : "text"
+                label = graph.type.ucfirst
+                link  = url.page _ "/{table_short_name}/graph/{graph_id}"
+                filter = ""
+              },{
+                type  = graph.writable ? "link" : "text"
+                label = layout.column(graph.x_axis).name
+                link  = url.page _ "/{table_short_name}/graph/{graph_id}"
+                filter = "html"
+              },{
+                type  = graph.writable ? "link" : "text"
+                label = layout.column(graph.y_axis).name
+                link  = url.page _ "/{table_short_name}/graph/{graph_id}"
+                filter = "html"
+              },{
+                type   = graph.writable ? "link" : "text"
+                label  = layout.column(graph.group_by).name
+                link   = url.page _ "/{table_short_name}/graph/{graph_id}"
+                filter = "html"
+              },]
+            });
+          END;
+        
+          INCLUDE tables/basic_table.tt;
+        %]
+        
+        <div class="row mt-5">
+          <div class="col-sm-auto">
+            <button
+              id="submit"
+              type="submit"
+              class="btn btn-default"
+              name="graphsubmit"
+              value="submit"
+            >
+              <span class="btn__title">Save</span>
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
