--- a/views/tables/basic_table.tt
+++ b/views/tables/basic_table.tt
@@ -1,5 +1,5 @@
 [%
-  tmplColumnConfig = '{_NAME_ORDERABLE_CLASSNAME_WIDTH},';
+  tmplColumnConfig = '{_NAME_ORDERABLE_TYPE_DATA_CLASSNAME_WIDTH},';
   tmplColumnButtonConfig = '{"name":"","orderable":false,"className":"min-tablet-l data-table__header--invisible"},';
 
   reorderConfig    = '';
@@ -38,6 +38,8 @@
     rowField = tmplColumnConfig
       .replace('_NAME', column.name ? '"name":"' _ column.name _ '"' : '"name":""')
       .replace('_ORDERABLE', column.orderable ? ',"orderable":true' : ',"orderable":false')
+      .replace('_TYPE', column.type ? ',"type": "' _ column.type _ '"' : '')
+      .replace('_DATA', column.data ? ',"data": "' _ column.data _ '"' : '')
       .replace('_CLASSNAME', column.class ? ',"className":"' _ column.class _ '"' : '')
       .replace('_WIDTH', column.width ? ', "width":"' _ column.width _ '"' : '');
 
