--- a/views/data_table.tt
+++ b/views/data_table.tt
@@ -5,13 +5,13 @@
     <div class="row mb-md-3">
       [% INCLUDE snippets/rag_legend.tt %]
     </div>
-    [% END %]
     [%
+      END;
+    
       # prepare table config
       table_class        = 'table-striped table-hover';
       table_dom          = '<\"row row--header\"<\"col\"f><\"col-lg-auto dataTables_length_wrapper\"l>><\"row row--main\"<\"col-sm-12\"tr>><\"row row--footer\"<\"col-sm-12 col-lg-6\"p><\"col-sm-12 col-lg-6 dataTables_info_wrapper\"i>>';
-      # todo: change to endpoint URL
-      table_ajax         = url.page _  "/test-response.json"; # url.page _ "/" _ layout.identifier _ "/api/browse";
+      table_ajax         = url.page _ "/api/" _ layout.identifier _ "/records";
       table_order        = '[0,"asc"]';
       table_language     = '{"emptyTable": "There is no records available","lengthMenu":"Rows per page _MENU_","paginate":{"next":"Next page","previous":"Previous page"},"search":"","searchPlaceholder":"Search in this table"}';
       table_page_length  = 50;
@@ -19,17 +19,22 @@
       table_unresponsive = 0;
       table_columns      = [];
       rows               = [];
+      processed_columns  = [];
     
-      IF is_group;
-        table_columns.push({});
-      END;
+      # IF is_group;
+      #   table_columns.push({});
+      # END;
   
       FOREACH col IN columns;
+        NEXT IF processed_columns.grep(col.id).size;
         table_columns.push({
           name = col.name,
+          type = col.type,
           orderable = 1,
           filter = "html"
         });
+    
+        processed_columns.push(col.id);
       END;
     
       INCLUDE tables/basic_table.tt;
