Fix bugs in graph overview where checkboxes were not saving their data and datatable was not rendering properly

--- a/views/graphs.tt
+++ b/views/graphs.tt
@@ -26,9 +26,8 @@
           # prepare table config
           table_class        = 'table-striped table-selectable';
           table_dom          = '<\"row row--header\"<\"col\"f><\"col-lg-auto dataTables_length_wrapper\"l>><\"row row--main\"<\"col-sm-12\"tr>><\"row row--footer\"<\"col-sm-12 col-lg-6\"p><\"col-sm-12 col-lg-6 dataTables_info_wrapper\"i>>';
-          # todo: change to endpoint URL
           table_order        = '[0,"asc"]';
-          table_language     = '{"emptyTable": "No graphs have been created. Please use the &quot;Add a graph&quot; button above to add one.","lengthMenu":"Rows per page _MENU_","paginate":{"next":"Next page","previous":"Previous page"},"search":"","searchPlaceholder":"Search in this table"}';
+          table_language     = '{"emptyTable": "No graphs have been created. Please use the `Add a graph` button above to add one.","lengthMenu":"Rows per page _MENU_","paginate":{"next":"Next page","previous":"Previous page"},"search":"","searchPlaceholder":"Search in this table"}';
           table_page_length  = 50;
           table_length_menu  = 'basic';
           table_unresponsive = 0;
@@ -67,7 +66,7 @@
                 label       = ""
                 sub_field   = "fields/sub/checkbox.tt"
                 sub_params  = {
-                  id => "dt_checkbox_" _ graph.id
+                  id => "graphs_" _ graph.id
                   name => "graphs"
                   label => graph.id
                   checked => graph.selected ? 1 : 0
@@ -76,7 +75,7 @@
                   autofocus => 0
                   input_class => "checkbox--hide-label"
                   label_in_span => 1
-                  value => 1
+                  value => graph.id
                 }
               }, {
                 type  = graph.writable ? "link" : "text"
