--- a/views/snippets/header_table_detail.tt
+++ b/views/snippets/header_table_detail.tt
@@ -1,5 +1,5 @@
 [%
-  records_active_pages    = ["data_table", "data_graph", "data_timeline", "data_globe","data_calender"];
+  records_active_pages    = ["data_table", "data_graph", "data_timeline", "data_globe","data_calender", "graphs", "graph"];
   edit_table_active_pages = ["table_edit", "topics", "topic_add", "topic_edit","layouts", "layout"];
 %]
 <header class="table-header row no-gutters ">
@@ -13,7 +13,6 @@
         <div class="list list--horizontal">
           <ul class="list__items">
             <li class="list__item">
-              [% %]
               <a href='[% url.page %]/[% layout_obj.identifier %]/data' class='link link--plain [% IF records_active_pages.grep(page).size %]link--active[% END %]'>
                 <span>Records</span>
               </a>
@@ -61,219 +60,221 @@
   
       <div class="table-header__options-right">
         [%
-          IF viewtype == "graph" AND layout.user_can("layout");
-            INCLUDE snippets/dropdown.tt
-              id             = "manage_graphs"
-              custom_classes = "dropdown--small"
-              label          = "Manage graphs"
-              filter         = "html"
-              groups         = [{
-                items = [{
-                  label  = "Manage graphs",
-                  target = url.page _ "/" _ layout.identifier _ "/graphs/"
-                }, {
-                  label  = "Metrics",
-                  target = url.page _ "/" _ layout.identifier _ "/metrics/"
-                }]
-              }];
-          END;
-        
-        
-          view_groups = [];
-        
-          IF user_views.personal.size;
-            view_items = [];
-        
-            FOREACH ve IN user_views.personal;
-              veid = ve.id;
-        
-              view_items.push({
-                label  = ve.name,
-                target = url.page _ "/" _ layout_obj.identifier _ "/data?view=" _ ve.id,
-                alert  = alerts.$veid ? 1 : 0
-              });
+          IF page.substr(0, 5) == "data_";
+            IF viewtype == "graph" AND layout.user_can("layout");
+              INCLUDE snippets/dropdown.tt
+                id             = "manage_graphs"
+                custom_classes = "dropdown--small"
+                label          = "Manage graphs"
+                filter         = "html"
+                groups         = [{
+                  items = [{
+                    label  = "Manage graphs",
+                    target = url.page _ "/" _ layout.identifier _ "/graphs/"
+                  }, {
+                    label  = "Metrics",
+                    target = url.page _ "/" _ layout.identifier _ "/metrics/"
+                  }]
+                }];
             END;
-        
-            view_groups.push({
-              label = views_other_user ? "Views of " _ views_other_user.value : "Personal views",
-              items = view_items
-            });
-          END;
-        
-          IF user_views.admin.size;
-            view_items = [];
-        
-            FOREACH ve IN user_views.admin;
-              veid = ve.id;
-        
-              view_items.push({
-                label  = ve.name,
-                target = url.page _ "/" _ layout_obj.identifier _ "/data?view=" _ ve.id,
-                alert  = alerts.$veid ? 1 : 0
-              });
-            END;
-        
-            view_groups.push({
-              label = "Administration views",
-              items = view_items
-              items = view_items
-            });
-          END;
-        
-          IF user_views.shared.size;
-            view_items = [];
-  
-            FOREACH ve IN user_views.shared;
-              veid = ve.id;
-        
-              view_items.push({
-                label  = ve.name,
-                target = url.page _ "/" _ layout_obj.identifier _ "/data?view=" _ ve.id,
-                alert  = alerts.$veid ? 1 : 0
-              });
-            END;
-        
-            view_groups.push({
-              label = "Shared views",
-              items = view_items
-            });
-          END;
-  
-          INCLUDE snippets/dropdown.tt
-            id             = "views"
-            custom_classes = "dropdown--small"
-            label          = "Current view: " _  (v ? v.name : "All data")
-            filter         = "html"
-            groups         = view_groups;
-        
-          manage_view_groups = [{ items = [] }];
-  
-          IF layout.user_can("view_create");
-            manage_view_groups.0.items.push({
-                class  = "link--add",
-                target = url.page _ "/" _ layout.identifier _ "/view/0",
-                label  = "Add a view"
-              });
-          END;
-  
-          IF v;
-            IF layout.user_can("view_create");
-              IF v.writable;
-                manage_view_groups.0.items.push({
-                  class  = "",
-                  target = url.page _ "/" _ layout.identifier _ "/view/" _ v.id,
-                  label  = "Edit current view"
+          
+          
+            view_groups = [];
+          
+            IF user_views.personal.size;
+              view_items = [];
+          
+              FOREACH ve IN user_views.personal;
+                veid = ve.id;
+          
+                view_items.push({
+                  label  = ve.name,
+                  target = url.page _ "/" _ layout_obj.identifier _ "/data?view=" _ ve.id,
+                  alert  = alerts.$veid ? 1 : 0
                 });
               END;
-        
-              manage_view_groups.0.items.push({
-                class  = "",
-                target = url.page _ "/" _ layout.identifier _ "/view/0?clone=" _ v.id,
-                label  = "Clone current view"
+          
+              view_groups.push({
+                label = views_other_user ? "Views of " _ views_other_user.value : "Personal views",
+                items = view_items
               });
             END;
-        
-            manage_view_groups.0.items.push({
-              type   = "modal"
-              class  = "",
-              target = "alertModal",
-              label  = "Alert me"
-            });
-          END;
-        
-          IF layout.user_can("layout");
-            manage_view_groups.0.items.push({
-              type   = "modal"
-              class  = "",
-              target = "viewsOfAnotherUserModal",
-              label  = "Manage views of another user"
-            });
-          END;
-        
-          manage_view_groups.0.items.push({
-            type   = "modal"
-            class  = "",
-            target = "historicViewModal",
-            label  = "Historic view"
-          });
-  
-          INCLUDE snippets/dropdown.tt
-            id             = "manage_views"
-            custom_classes = "dropdown--small"
-            label          = "Manage views"
-            filter         = "html"
-            groups         = manage_view_groups;
-        
-          IF views_limit_extra.size;
-            view_limit_groups = [{ items = [] }];
-  
-            FOR view_limit IN views_limit_extra;
-              view_limit_groups.0.items.push({
-                label  = view_limit.name,
-                target = url.page _ "/" _ layout_obj.identifier _ "/data?extra=" _ view_limit.id,
-                alert  = 0
+          
+            IF user_views.admin.size;
+              view_items = [];
+          
+              FOREACH ve IN user_views.admin;
+                veid = ve.id;
+          
+                view_items.push({
+                  label  = ve.name,
+                  target = url.page _ "/" _ layout_obj.identifier _ "/data?view=" _ ve.id,
+                  alert  = alerts.$veid ? 1 : 0
+                });
+              END;
+          
+              view_groups.push({
+                label = "Administration views",
+                items = view_items
+                items = view_items
               });
             END;
-        
+          
+            IF user_views.shared.size;
+              view_items = [];
+    
+              FOREACH ve IN user_views.shared;
+                veid = ve.id;
+          
+                view_items.push({
+                  label  = ve.name,
+                  target = url.page _ "/" _ layout_obj.identifier _ "/data?view=" _ ve.id,
+                  alert  = alerts.$veid ? 1 : 0
+                });
+              END;
+          
+              view_groups.push({
+                label = "Shared views",
+                items = view_items
+              });
+            END;
+    
             INCLUDE snippets/dropdown.tt
-              id             = "view_limits"
+              id             = "views"
               custom_classes = "dropdown--small"
-              label          = current_view_limit_extra.name
+              label          = "Current view: " _  (v ? v.name : "All data")
               filter         = "html"
-              groups         = view_limit_groups;
-          END;
-        
-          IF layout_obj.user_can("bulk_update") OR layout_obj.user_can("delete") OR layout_obj.user_can("download") OR layout_obj.user_can("bulk_delete");
-            bulk_action_groups = [{ items = [] }];
-            
-            IF search;
-              sel_type = "records in this search";
-            ELSIF viewtype == "timeline";
-              sel_type = "selected records";
-            ELSE;
-              sel_type = "records in this view";
+              groups         = view_groups;
+          
+            manage_view_groups = [{ items = [] }];
+    
+            IF layout.user_can("view_create");
+              manage_view_groups.0.items.push({
+                  class  = "link--add",
+                  target = url.page _ "/" _ layout.identifier _ "/view/0",
+                  label  = "Add a view"
+                });
             END;
-        
-            IF layout_obj.user_can("delete") AND layout_obj.user_can("bulk_delete");
-              bulk_action_groups.0.items.push({
-                type   = "modal",
-                id     = "delete_href",
-                class  = "bulk_href",
-                target = "modal_delete",
-                label  = "Delete all " _ sel_type
-              });
-            END;
-        
-            IF layout_obj.user_can("bulk_update");
-              bulk_action_groups.0.items.push({
-                id     = "update_href",
-                class  = "bulk_href",
-                target = url.page _ "/" _ layout_obj.identifier _ "/bulk/update/",
-                label  = "Update all " _ sel_type
-              },{
-                id     = "clone_href",
-                class  = "bulk_href",
-                target = url.page _ "/" _ layout_obj.identifier _ "/bulk/clone/",
-                label  = "Clone all " _ sel_type
-              });
-            END;
-        
-            IF viewtype == "table" AND records.size AND layout_obj.user_can("download");
-              bulk_action_groups.0.items.push({
-                id     = "",
+    
+            IF v;
+              IF layout.user_can("view_create");
+                IF v.writable;
+                  manage_view_groups.0.items.push({
+                    class  = "",
+                    target = url.page _ "/" _ layout.identifier _ "/view/" _ v.id,
+                    label  = "Edit current view"
+                  });
+                END;
+          
+                manage_view_groups.0.items.push({
+                  class  = "",
+                  target = url.page _ "/" _ layout.identifier _ "/view/0?clone=" _ v.id,
+                  label  = "Clone current view"
+                });
+              END;
+          
+              manage_view_groups.0.items.push({
+                type   = "modal"
                 class  = "",
-                target = url.page _ "/" _ layout_obj.identifier _ "/data?download" _ (filter_url ? "&" _ filter_url : "" ),
-                label  = "Download records"
+                target = "alertModal",
+                label  = "Alert me"
               });
             END;
-        
-            IF bulk_action_groups.0.items.size;
+          
+            IF layout.user_can("layout");
+              manage_view_groups.0.items.push({
+                type   = "modal"
+                class  = "",
+                target = "viewsOfAnotherUserModal",
+                label  = "Manage views of another user"
+              });
+            END;
+          
+            manage_view_groups.0.items.push({
+              type   = "modal"
+              class  = "",
+              target = "historicViewModal",
+              label  = "Historic view"
+            });
+    
+            INCLUDE snippets/dropdown.tt
+              id             = "manage_views"
+              custom_classes = "dropdown--small"
+              label          = "Manage views"
+              filter         = "html"
+              groups         = manage_view_groups;
+          
+            IF views_limit_extra.size;
+              view_limit_groups = [{ items = [] }];
+    
+              FOR view_limit IN views_limit_extra;
+                view_limit_groups.0.items.push({
+                  label  = view_limit.name,
+                  target = url.page _ "/" _ layout_obj.identifier _ "/data?extra=" _ view_limit.id,
+                  alert  = 0
+                });
+              END;
+          
               INCLUDE snippets/dropdown.tt
-                id             = "bulk_actions"
+                id             = "view_limits"
                 custom_classes = "dropdown--small"
-                label          = "Bulk actions"
+                label          = current_view_limit_extra.name
                 filter         = "html"
-                groups         = bulk_action_groups;
+                groups         = view_limit_groups;
+            END;
+          
+            IF layout_obj.user_can("bulk_update") OR layout_obj.user_can("delete") OR layout_obj.user_can("download") OR layout_obj.user_can("bulk_delete");
+              bulk_action_groups = [{ items = [] }];
+              
+              IF search;
+                sel_type = "records in this search";
+              ELSIF viewtype == "timeline";
+                sel_type = "selected records";
+              ELSE;
+                sel_type = "records in this view";
+              END;
+          
+              IF layout_obj.user_can("delete") AND layout_obj.user_can("bulk_delete");
+                bulk_action_groups.0.items.push({
+                  type   = "modal",
+                  id     = "delete_href",
+                  class  = "bulk_href",
+                  target = "modal_delete",
+                  label  = "Delete all " _ sel_type
+                });
+              END;
+          
+              IF layout_obj.user_can("bulk_update");
+                bulk_action_groups.0.items.push({
+                  id     = "update_href",
+                  class  = "bulk_href",
+                  target = url.page _ "/" _ layout_obj.identifier _ "/bulk/update/",
+                  label  = "Update all " _ sel_type
+                },{
+                  id     = "clone_href",
+                  class  = "bulk_href",
+                  target = url.page _ "/" _ layout_obj.identifier _ "/bulk/clone/",
+                  label  = "Clone all " _ sel_type
+                });
+              END;
+          
+              IF viewtype == "table" AND records.size AND layout_obj.user_can("download");
+                bulk_action_groups.0.items.push({
+                  id     = "",
+                  class  = "",
+                  target = url.page _ "/" _ layout_obj.identifier _ "/data?download" _ (filter_url ? "&" _ filter_url : "" ),
+                  label  = "Download records"
+                });
+              END;
+          
+              IF bulk_action_groups.0.items.size;
+                INCLUDE snippets/dropdown.tt
+                  id             = "bulk_actions"
+                  custom_classes = "dropdown--small"
+                  label          = "Bulk actions"
+                  filter         = "html"
+                  groups         = bulk_action_groups;
+              END;
             END;
           END;
         %]
